# learnCMake

./: .gitignore  CMakeLists.txt  main.cpp
